BikeShopNoviSad/manifest/auth-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novi-sad-bike-shop
  labels:
    app: novi-sad-bike-shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: novi-sad-bike-shop
  template:
    metadata:
      labels:
        app: novi-sad-bike-shop
    spec:
      containers:
      - name: novi-sad-app
        image: katarina59/bike-shop-novi-sad:latest
        ports:
        - containerPort: 5001
