BikeShopNoviSad/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: novi-sad-app-service
spec:
  selector:
    app: novi-sad-bike-shop
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
  type: ClusterIP
